import("//build/buildflag_header.gni")
import("hopium_features.gni")

buildflag_header("hopium_features") {
    header = "hopium_features.h"
    flags = [
        "TSEC_BRAND=$tsec_brand",
        "TSEC_FULL_REBRAND=$tsec_full_rebrand"
    ]
}

# static_library("hopium_config") {
#     sources = [
#         "hopium_config.h",
#         "hopium_config.cc"
#     ]

#     deps = [
#         ":hopium_features"
#     ]
# }